--- a/encode_decode_64.html
+++ b/encode_decode_64.html
@@ -50,17 +50,24 @@ layout: default
 </script>
 
 <div class="container text-center">
-  <h1>ENCODE_DECODE</h1>
+  <h1>Encode64 / Decode64</h1>
   <p>The purpose is to have a browser only decode/encode mechanism without sending any data to a distant server</p>
-  <form>
-    <textarea id="input_string" name="input_string" rows="10" cols="80" autofocus="true" placeholder="Put your encoded or decoded string here"></textarea>
-
+  <p>The code is available here : </p>
+  <p>The encoding / decoding it done by the btoa() and atob() native javascript function</p>
+  <div>
+    <textarea id="input_string" name="input_string" rows="10" cols="80" autofocus="true" placeholder="Put your encoded or decoded string here">
+    </textarea>
+  </div>
+  <div>
     <button name="encode64" onclick="encode64();">Encode the UTF-8 input into base 64</button>
     <button name="encode64x2" onclick="encode64x2();">Encode the UTF-8 input into base 64, twice</button>
     <button name="decode64" onclick="decode64();">Decode the UTF-8 base64 input</button>
     <button name="decode64x2" onclick="decode64x2();">Decode the UTF-8 base64 input twice</button>
+  </div>
 
-    <textarea id="output_string" name="output_string" rows="10" cols="80" readonly="true"></textarea>
+  <div>
+    <textarea id="output_string" name="output_string" rows="10" cols="80" readonly="true">
+    </textarea>
     <button id="copyButton" onclick="copy_output();">Click to copy</button>
-  </form>
+  </div>
 </div>
