Change event format

--- a/encode_decode_64.html
+++ b/encode_decode_64.html
@@ -4,50 +4,52 @@ layout: default
 
 <script>
 
-  document.getElementById("encode64").onclick = function () {
-    const input_string = document.getElementById("input_string").value
-    const encoded_input = btoa(input_string)
-    console.log("Encode64 of input_string " + encoded_input)
-    document.getElementById("output_string").value = encoded_input
-  };
+  document.addEventListener("DOMContentLoaded", function() {
 
-  function encode64x2(){
-    const input_string = document.getElementById("input_string").value
-    const encoded_input = btoa(btoa(input_string))
-    console.log("encode64x2 of input_string " + encoded_input)
-    document.getElementById("output_string").value = encoded_input
-  }
+    document.getElementById("encode64").onclick = function () {
+      const input_string = document.getElementById("input_string").value
+      const encoded_input = btoa(input_string)
+      console.log("Encode64 of input_string " + encoded_input)
+      document.getElementById("output_string").value = encoded_input
+    };
 
-  function decode64(){
-    const input_string = document.getElementById("input_string").value
-    const decoded_input = atob(input_string)
-    console.log("decode64 of input_string " + decoded_input)
-    document.getElementById("output_string").value = encoded_input
-  }
-
-  function decode64x2(){
-    const input_string = document.getElementById("input_string").value
-    const encoded_input = atob(atob(input_string))
-    console.log("decode64x2 of input_string " + encoded_input)
-    document.getElementById("output_string").value = encoded_input
-  }
-
-  function copy_output(){
-    const textToCopy = document.getElementById("output_string").value;
-    if (!navigator.clipboard) {
-      return;
+    document.getElementById("encode64x2").onclick = function () {
+      const input_string = document.getElementById("input_string").value
+      const encoded_input = btoa(btoa(input_string))
+      console.log("encode64x2 of input_string " + encoded_input)
+      document.getElementById("output_string").value = encoded_input
     }
-    try {
-      navigator.clipboard.writeText(textToCopy);
-      document.getElementById('copyButton').innerText = 'Copied to clipboard';
-      setTimeout(function () {
-        document.getElementById('copyButton').innerText = 'Click to copy';
-      }, 1200);
-    } catch (err) {
-      console.error('Failed to copy!', err);
-    }
-  }
 
+    document.getElementById("decode64").onclick = function () {
+      const input_string = document.getElementById("input_string").value
+      const decoded_input = atob(input_string)
+      console.log("decode64 of input_string " + decoded_input)
+      document.getElementById("output_string").value = encoded_input
+    }
+
+    document.getElementById("decode64x2").onclick = function () {
+      const input_string = document.getElementById("input_string").value
+      const encoded_input = atob(atob(input_string))
+      console.log("decode64x2 of input_string " + encoded_input)
+      document.getElementById("output_string").value = encoded_input
+    }
+
+    document.getElementById("copyButton").onclick = function () {
+      const textToCopy = document.getElementById("output_string").value;
+      if (!navigator.clipboard) {
+        return;
+      }
+      try {
+        navigator.clipboard.writeText(textToCopy);
+        document.getElementById('copyButton').innerText = 'Copied to clipboard';
+        setTimeout(function () {
+          document.getElementById('copyButton').innerText = 'Click to copy';
+        }, 1200);
+      } catch (err) {
+        console.error('Failed to copy!', err);
+      }
+    }
+  })
 </script>
 
 <div class="container text-center">
@@ -61,14 +63,14 @@ layout: default
   </div>
   <div>
     <span id="encode64" >Encode the UTF-8 input into base 64</span>
-    <button id="encode64x2" onclick="encode64x2();">Encode the UTF-8 input into base 64, twice</button>
-    <button id="decode64" onclick="decode64();">Decode the UTF-8 base64 input</button>
-    <button id="decode64x2" onclick="decode64x2();">Decode the UTF-8 base64 input twice</button>
+    <span id="encode64x2" onclick="encode64x2();">Encode the UTF-8 input into base 64, twice</span>
+    <span id="decode64" onclick="decode64();">Decode the UTF-8 base64 input</span>
+    <span id="decode64x2" onclick="decode64x2();">Decode the UTF-8 base64 input twice</span>
   </div>
 
   <div>
     <textarea id="output_string" name="output_string" rows="10" cols="80" readonly="true">
     </textarea>
-    <button id="copyButton" onclick="copy_output();">Click to copy</button>
+    <span id="copyButton" onclick="copy_output();">Click to copy</span>
   </div>
 </div>
