--- a/encode_decode_64.html
+++ b/encode_decode_64.html
@@ -62,15 +62,15 @@ layout: default
     </textarea>
   </div>
   <div>
-    <span id="encode64" >Encode the UTF-8 input into base 64</span>
-    <span id="encode64x2" onclick="encode64x2();">Encode the UTF-8 input into base 64, twice</span>
-    <span id="decode64" onclick="decode64();">Decode the UTF-8 base64 input</span>
-    <span id="decode64x2" onclick="decode64x2();">Decode the UTF-8 base64 input twice</span>
+    <span id="encode64" class="button">Encode the UTF-8 input into base 64</span>
+    <span id="encode64x2" class="buttononclick="encode64x2();">Encode the UTF-8 input into base 64, twice</span>
+    <span id="decode64" class="button onclick="decode64();">Decode the UTF-8 base64 input</span>
+    <span id="decode64x2" class="buttononclick="decode64x2();">Decode the UTF-8 base64 input twice</span>
   </div>
 
   <div>
     <textarea id="output_string" name="output_string" rows="10" cols="80" readonly="true">
     </textarea>
-    <span id="copyButton" onclick="copy_output();">Click to copy</span>
+    <span id="copyButton" class="button" onclick="copy_output();">Click to copy</span>
   </div>
 </div>
