--- a/encode_decode_64.html
+++ b/encode_decode_64.html
@@ -30,7 +30,7 @@ layout: default
     document.getElementById("decode64x2").onclick = function () {
       const input_string = document.getElementById("input_string").value
       const decoded_input = atob(atob(input_string))
-      console.log("decode64x2 of input_string " + encoded_input)
+      console.log("decode64x2 of input_string " + decoded_input)
       document.getElementById("output_string").value = decoded_input
     }
 
